:memo:: Update all stories with a better component name
Signed-off-by: Alexandre Nicolaie <xunleii@users.noreply.github.com>

--- a/src/components/GettingStarted.mdx
+++ b/src/components/GettingStarted.mdx
@@ -6,19 +6,21 @@ import { Meta } from '@storybook/blocks';
 
 ## Why Use Storybook for an ArgoCD Extension?
 
-Using Storybook for this ArgoCD extension enables isolated UI component development without relying on a local ArgoCD cluster, greatly simplifying the development environment. It also allows UI components to be tested in CI, naturally integrating visual and interaction tests into the continuous delivery pipeline. Finally, the interactive documentation provides a centralized space where contributors can review and test components, creating a shared technical reference.
+Using Storybook for this ArgoCD extension enables isolated UI component development without relying on a local ArgoCD cluster, greatly simplifying the development process. It also allows UI components to be tested in CI, naturally integrating visual and interaction tests into the continuous delivery pipeline. Finally, the interactive documentation provides a centralized space where contributors can review and test components, creating a shared technical reference.
 
 ---
 
 ## Table of Contents
 
-- [**ApplicationMap**](?path=/docs/components-applicationmap-applicationmap--docs): Graphical visualization of applications and their dependencies
-- [**ApplicationMapNode**](?path=/docs/components-applicationmapnode-applicationmapnode--docs): Individual representation of an application or ApplicationSet
-- [**StatusPanel**](?path=/docs/components-statuspanel-statuspanel--docs): Summary of health and synchronization statuses
-- [**ApplicationMapNavigationControls**](?path=/docs/components-applicationmapnavigationcontrols-applicationmapnavigationcontrols--docs): Zoom and navigation controls for the map
-- [**IconStatusHealth**](?path=/docs/icons-iconstatushealth--docs): Health status icon
-- [**IconStatusSync**](?path=/docs/icons-iconstatussync--docs): Synchronization status icon
-- [**StateScreen**](?path=/docs/components-statescreen-statescreen--docs): State screens (empty, error, etc.)
+- [**Application Map**](?path=/docs/components-application-map-map--docs): Graphical visualization of applications and their dependencies
+- [**Application Map Node**](?path=/docs/components-application-map-node--docs): Individual representation of an application or ApplicationSet
+- [**Application Map Navigation Controls**](?path=/docs/components-application-map-navigation-controls--docs): Zoom and navigation controls for the map
+- [**State Screen**](?path=/docs/components-state-screen--docs): State screens (empty, error, etc.)
+- [**Status Panel**](?path=/docs/components-status-panel--docs): Summary of health and synchronization statuses
+
+- [**Icon SSE Status**](?path=/docs/icons-status-sse--docs): SSE status icon
+- [**Icon Health Status**](?path=/docs/icons-status-health--docs): Health status icon
+- [**Icon Sync Status**](?path=/docs/icons-status-sync--docs): Synchronization status icon
 
 ---
 
